@@ -1,0 +1,94 @@
+comment_char %
+escape_char  /
+
+% Tibetan language locale for India
+%
+% Based on dz_BT by Pema Geyleg
+
+LC_IDENTIFICATION
+title      "Tibetan language locale for India"
+source     ""
+address    ""
+contact    ""
+email      "bug-glibc@gnu.org"
+tel        ""
+fax        ""
+language   "Tibetan"
+territory  "India"
+revision   "0.1"
+date       "2007-11-06"
+%
+category  "bo_IN:2007";LC_IDENTIFICATION
+category  "bo_IN:2007";LC_CTYPE
+category  "bo_IN:2007";LC_COLLATE
+category  "bo_IN:2007";LC_NUMERIC
+category  "bo_IN:2007";LC_MONETARY
+category  "bo_IN:2007";LC_MESSAGES
+category  "bo_IN:2007";LC_PAPER
+category  "bo_IN:2007";LC_NAME
+category  "bo_IN:2007";LC_ADDRESS
+category  "bo_IN:2007";LC_TELEPHONE
+
+END LC_IDENTIFICATION
+
+LC_CTYPE
+copy "bo_CN"
+END LC_CTYPE
+
+LC_COLLATE
+copy "bo_CN"
+END LC_COLLATE
+
+LC_MONETARY
+copy "hi_IN"
+END LC_MONETARY
+
+LC_NUMERIC
+% FIXME: check that grouping etc is correct
+copy "bo_CN"
+END LC_NUMERIC
+
+LC_TIME
+copy "bo_CN"
+END LC_TIME
+
+LC_MESSAGES
+copy "bo_CN"
+END LC_MESSAGES
+
+LC_TELEPHONE
+copy "hi_IN"
+END LC_TELEPHONE
+
+LC_PAPER
+copy "hi_IN"
+END LC_PAPER
+
+LC_MEASUREMENT
+copy "hi_IN"
+END LC_MEASUREMENT
+
+LC_NAME
+% FIXME
+name_fmt	"FIXME"
+name_gen	"FIXME"
+name_miss	"FIXME"
+name_mr		"FIXME"
+name_mrs	"FIXME"
+name_ms		"FIXME"
+END LC_NAME
+
+LC_ADDRESS
+% FIXME
+postal_fmt	"FIXME"
+country_name	"FIXME"
+
+country_ab2 "<U0049><U004E>"
+country_ab3 "<U0049><U004E><U0044>"
+country_num 356
+
+lang_name     "<U0F54><U0F7C><U0F51><U0F0B><U0F66><U0F90><U0F51><U0F0B>"
+lang_ab       "<U0062><U006F>"
+lang_term     "<U0062><U006F><U0064>"
+lang_lib      "<U0074><U0069><U0062>"
+END LC_ADDRESS
