@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2007-10-17
+GNU C Library NEWS -- history of user-visible changes.  2007-11-06
 Copyright (C) 1992-2006, 2007 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -7,6 +7,7 @@ using `glibc' in the "product" field.
 
 Version 2.8
 
+* New locales: bo_CN, bo_IN.
 
 Version 2.7
 
